<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/popup_title">
        <EditText
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapSentences"
            android:id="@+id/addtitle"
            android:hint="@string/en_add_title_hint"
            android:textColorHint="@color/hint_foreground_material_dark"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="8"
        android:background="@color/popup_body">
        <EditText
            android:singleLine="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:layout_gravity="start"
            android:hint="@string/en_add_description_hint"
            android:textColorHint="@color/hint_foreground_material_light"
            android:id="@+id/adddescription"
            android:inputType="textCapSentences"
            android:background="@android:color/transparent"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="24dp"
            android:text="@string/OK"
            android:onClick="addMeal"
            android:background="@color/dim_foreground_disabled_material_dark"
            android:layout_marginBottom="5dp"
            />
    </LinearLayout>


</LinearLayout>
