<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/main_background"
    tools:context=".ACT.MainAct.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textCapSentences"
            android:imeOptions="actionSearch"
            android:id="@+id/searchText"
            android:gravity="center"
            android:textSize="24dp"
            android:hint="@string/en_searchHint"
            android:textColorHint="@color/hint_foreground_material_light"
            android:background="@android:color/transparent"
            android:layout_marginBottom="12dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en_searching"
            android:textColor="@android:color/black"
            android:id="@+id/searchingtxt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/en_noresults"
                android:textStyle="bold"
                android:id="@+id/noresultstxt"/>
        </RelativeLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchListView"
            android:dividerHeight="10dp"
            android:divider="@color/main_background">
        </ListView>

    </LinearLayout>
</RelativeLayout>
