<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popup_body">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:id="@+id/fooddesname"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="24dp"
        android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading..."
            android:id="@+id/loadingtxt"
            android:textStyle="bold"
            android:textSize="26dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/nutlayout">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:text="@string/en_nutvalue"
        android:gravity="center"
        android:textSize="18dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:text="@string/en_perg"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:maxLength="20"
            android:text="@string/en_cal"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/kcaltxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:maxLength="20"
            android:gravity="center"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:maxLength="20"
            android:text="@string/en_protein"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/proteintxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:maxLength="20"
            android:gravity="center"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:maxLength="20"
            android:text="@string/en_carbs"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/carbtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:maxLength="20"
            android:gravity="center"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:maxLength="20"
            android:text="@string/en_fat"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/fattxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:maxLength="20"
            android:gravity="center"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
    </RelativeLayout>
    </LinearLayout>
</LinearLayout>
