<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:weightSum="3">

    <LinearLayout
        android:id="@+id/home_action"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:background="@drawable/action_bar_selector"
        android:clickable="true"
        android:onClick="closeAndMainActivity">
    <ImageView
        android:src="@drawable/homeimg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:adjustViewBounds="false" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/en_home"
            android:textSize="18dp"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/add_action"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:background="@drawable/action_bar_selector"
        android:clickable="true"
        android:onClick="openAddActivity">
        <ImageView
            android:src="@drawable/addmealimg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/en_add"
            android:textSize="18dp"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/search_action"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:background="@drawable/action_bar_selector"
        android:clickable="true"
        android:onClick="openAPIActivity">
        <ImageView
            android:src="@drawable/searchimg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/en_search"
            android:textSize="18dp"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>
